--- a/Javascript/threejs-basic/step1-3dBasic/3dBasic-3.html
+++ b/Javascript/threejs-basic/step1-3dBasic/3dBasic-3.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="../libs/three.js"></script>
     <!-- 애니메이션 되는 초당 프레임 수를 작은 그래프로 보여주는 라이브러리-->
     <script type="text/javascript" src="../libs/stats.js"></script>
+    <script type="text/javascript" src="../libs/dat.gui.js"></script>
     <style>
         body {
             /* set margin to 0 and overflow to hidden, to go fullscreen */
